# yt-chat-tts

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: audio_device.rs  main.rs
core/: Cargo.toml
gui/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
gui/src/: Main.elm  Main.elm.d.ts  global.css  main.ts
gui/src-tauri/: Cargo.toml  Tauri.toml
src/: audio_device.rs  chat_msg_sub.rs  lib.rs  main.rs  sound_player.rs  synthesis.rs  youtube_api.rs  youtube_chat.rs
src/chat_msg_sub/: youtube_api.rs
tauri-tmp/yt-chat-tts-gui/: pnpm-lock.yaml
tauri-tmp/yt-chat-tts-gui/src-tauri/: Cargo.toml  tauri.conf.json
