[package]
name = "yt-chat-tts-gui"
version = "0.1.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
license = "MIT"
repository = "https://github.com/0918nobita/yt-chat-tts.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["config-toml", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yt-chat-tts-core = { path = "../../core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
